const_pointers/compiling_error.txt
C:\Dropbox\CPlusPlus\Github\cplusplus\const_pointers\pre_post_increment.c++: In function 'int main()':
C:\Dropbox\CPlusPlus\Github\cplusplus\const_pointers\pre_post_increment.c++:36:10: error: lvalue required as unary '&' operand
  cout <<&2<<"\n"; // ERROR: 2 doesn't have any address..its r-value
          ^
